fix video overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   box-sizing: border-box; }
 
-img {
+img, video {
   max-width: 100%;
   display: block; }
 
@@ -372,6 +372,9 @@ body {
   height: 100%;
   opacity: .15;
   z-index: -10; }
+  .bg-video__content {
+    height: 100%;
+    object-fit: cover; }
 
 .about {
   background-color: #f7f7f7;
