--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,7 @@ body {
     box-sizing: border-box;
 }
 
-img {
+img, video {
     max-width: 100%;
     display: block;
 }
